Atualiza menu com logo à esquerda e cria pasta 'assets' para imagens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <nav class="menu">
-      <div class="logotipo">QueroDog 🐾</div>
+      <img src="assets/pata1.png" alt="Logo QueroDog" class="logo" />
+      <div class="logotipo">QueroDog</div>
     </nav>
     <main>
       <div class="container">
@@ -35,7 +36,7 @@
 
     <footer class="footer">
       <div class="footer-content">
-        <p>&copy; 2024 QueroDog - Programa Desenvolve Boticário</p>
+        <p>&copy; 2025 - QueroDog - Programa Desenvolve Boticário</p>
         <p>Descubra as melhores raças de cachorro para você</p>
       </div>
     </footer>
@@ -43,3 +44,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+
